images on report page

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,10 @@
     "\n",
     "# Pre-processing \n",
     "from data_processing.pre_processing import pre_processing\n",
+    "from data_processing.transform import create_df_with_datetimes\n",
+    "\n",
+    "# Scoring\n",
+    "from evaluation_protocol.performance_metrics import mape, smape\n",
     "\n",
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -23,7 +27,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m4_train_dataset_df = pd.read_csv('Dataset/Yearly-train.csv')\n",
+    "m4_test_dataset_df = pd.read_csv('Dataset/Yearly-test.csv')\n",
+    "info_df = pd.read_csv('Dataset/M4-info.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(info_df[info_df['category']=='Macro']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mape_list_macro = []\n",
+    "for i in range(80):\n",
+    "    timeseries_train_df = create_df_with_datetimes(m4_train_dataset_df, i)\n",
+    "    timeseries_test_df = create_df_with_datetimes(m4_test_dataset_df, i)\n",
+    "    timeseries_index = m4_test_dataset_df['V1'][i]\n",
+    "    target_column_name = timeseries_test_df.columns[1]\n",
+    "    real = timeseries_test_df[target_column_name]\n",
+    "\n",
+    "    predictions, complexity = predict_prophet_model(train=timeseries_train_df, test=timeseries_test_df)\n",
+    "    print(predictions)\n",
+    "    mape_score = mape(y_true=real,y_pred=predictions)\n",
+    "\n",
+    "    mape_list_macro.append(mape_score);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3936960664874438\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avg(lst):\n",
+    "    return sum(lst) / len(lst)\n",
+    "    \n",
+    "print(avg(mape_list_macro))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,163 +165,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'error: No selected file'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'error Invalid file extension, file extenstion: ini'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('test.ini')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found uploaded file! sample_dataset.csv\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "File matches expected structure\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "2023-01-01 06:00:00\n",
-      "['SINGLESCOREINFO', 'PREPROCESSING']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'message File uploaded successfully'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('sample_dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found uploaded file! wrong_column_dataset.csv\n",
-      "Index(['timestamp2', 'target'], dtype='object')\n",
-      "Index(['timestamp2', 'target'], dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Pre-processing result: Invalid column names! Expected column names \"timestamp\", \"target\"'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('wrong_column_dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found uploaded file! future_values.csv\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "File matches expected structure\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "2040-01-01 12:00:00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Pre-processing result: Error: Some timestamps in dataset are in the future!'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('future_values.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found uploaded file! invalid_format.csv\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "File matches expected structure\n",
-      "Index(['timestamp', 'target'], dtype='object')\n",
-      "Timestamp column cannot be transformed to datetime object\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Pre-processing result: Invalid timestamp format! Expected column names \"%d-%m-%y %H:%M\"'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_file('invalid_format.csv')"
    ]
@@ -277,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
